[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwalk"
version = "0.1.0"
description = "Quantum walk circuits + graph visualization for Qiskit"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["qiskit", "quantum", "quantum walk", "visualization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License"
]

# Keep hard deps minimal; plotting libs as extras
dependencies = [
  "qiskit>=2.0.0",          # pin to Qiskit 2.x
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.8",
  "networkx>=3.2",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
extend-select = ["I"]  # import sorting
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false